deployment/deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: authentication-service
  namespace: egs-cellwatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: authentication-service
  template:
    metadata:
      labels:
        app: authentication-service
    spec:
      containers:
      - name: authentication-service
        image: cellwatch.deti/egs-cellwatch/auth_app:v3
        resources:
          requests:
            memory: "32Mi"
            cpu: "10m"
          limits:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
---
apiVersion: v1
kind: Service
metadata:
  name: authentication-service
  namespace: egs-102573
spec:
  ports:
  - port: 80
    targetPort: 8080
  selector:
    app: authentication-service

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: nginx
  namespace: egs-cellwatch
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nginx
  strategy: {}
  template:
    metadata:
      labels:
        app: nginx
    spec:
      containers:
        - image: registry.deti/cellwatch/nginx-volumes:v1
          name: nginx
          ports:
            - containerPort: 80
          resources: {}
          volumeMounts:
            - name: nginx-static
              mountPath: /var/www/static
      restartPolicy: Always
      volumes:
        - name: nginx-static
          persistentVolumeClaim:
            claimName: nginx-static-pvc
